autosnmp/parsemib/src/main/java/parsemib/SNMPMIBParser.java
// Generated from ./SNMPMIB.g4 by ANTLR 4.7.1
package parsemib;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SNMPMIBParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		COMMENT=39, NUMBER=40, WS=41, LINE_COMMENT=42, BSTRING=43, HSTRING=44, 
		CSTRING=45, APOSTROPHE=46, IDENTIFIER=47;
	public static final int
		RULE_moduleDefinition = 0, RULE_tagDefault = 1, RULE_extensionDefault = 2, 
		RULE_moduleBody = 3, RULE_exports = 4, RULE_symbolsExported = 5, RULE_imports = 6, 
		RULE_symbolsImported = 7, RULE_symbolsFromModuleList = 8, RULE_symbolsFromModule = 9, 
		RULE_globalModuleReference = 10, RULE_symbolList = 11, RULE_symbol = 12, 
		RULE_assignmentList = 13, RULE_assignment = 14, RULE_typeAssignment = 15, 
		RULE_valueAssignment = 16, RULE_texttype = 17, RULE_asnType = 18, RULE_builtinType = 19, 
		RULE_valuetype = 20, RULE_modulevalueType = 21, RULE_objectvalueType = 22, 
		RULE_objectidentifiervaluetype = 23, RULE_valuedesctype = 24, RULE_syntaxdesctype = 25, 
		RULE_indexdesctype = 26, RULE_unknowndesctype = 27, RULE_octetStringType = 28, 
		RULE_objectidentifiertype = 29, RULE_sequencetype = 30, RULE_typedefine = 31, 
		RULE_integerType = 32, RULE_namedNumberList = 33, RULE_namedNumber = 34, 
		RULE_signedNumber = 35, RULE_sizeConstraint = 36, RULE_constraint = 37, 
		RULE_rangeconstraint = 38;
	public static final String[] ruleNames = {
		"moduleDefinition", "tagDefault", "extensionDefault", "moduleBody", "exports", 
		"symbolsExported", "imports", "symbolsImported", "symbolsFromModuleList", 
		"symbolsFromModule", "globalModuleReference", "symbolList", "symbol", 
		"assignmentList", "assignment", "typeAssignment", "valueAssignment", "texttype", 
		"asnType", "builtinType", "valuetype", "modulevalueType", "objectvalueType", 
		"objectidentifiervaluetype", "valuedesctype", "syntaxdesctype", "indexdesctype", 
		"unknowndesctype", "octetStringType", "objectidentifiertype", "sequencetype", 
		"typedefine", "integerType", "namedNumberList", "namedNumber", "signedNumber", 
		"sizeConstraint", "constraint", "rangeconstraint"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'('", "')'", "'}'", "'DEFINITIONS'", "'::='", "'BEGIN'", 
		"'END'", "'EXPLICIT'", "'IMPLICIT'", "'AUTOMATIC'", "'TAGS'", "'EXTENSIBILITY'", 
		"'IMPLIED'", "'EXPORTS'", "';'", "'ALL'", "'IMPORTS'", "'FROM'", "','", 
		"'MODULE-IDENTITY'", "'OBJECT-TYPE'", "'OBJECT'", "'IDENTIFIER'", "'SYNTAX'", 
		"'SEQUENCE'", "'OF'", "'INDEX'", "'OCTET'", "'STRING'", "'INTEGER'", "'INTEGER32'", 
		"'Integer32'", "'Integer'", "'|'", "'-'", "'SIZE'", "'..'", "'--'", null, 
		null, null, null, null, null, "'''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "COMMENT", "NUMBER", "WS", "LINE_COMMENT", "BSTRING", 
		"HSTRING", "CSTRING", "APOSTROPHE", "IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SNMPMIB.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SNMPMIBParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModuleDefinitionContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SNMPMIBParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SNMPMIBParser.IDENTIFIER, i);
		}
		public TagDefaultContext tagDefault() {
			return getRuleContext(TagDefaultContext.class,0);
		}
		public ExtensionDefaultContext extensionDefault() {
			return getRuleContext(ExtensionDefaultContext.class,0);
		}
		public ModuleBodyContext moduleBody() {
			return getRuleContext(ModuleBodyContext.class,0);
		}
		public List<TerminalNode> NUMBER() { return getTokens(SNMPMIBParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(SNMPMIBParser.NUMBER, i);
		}
		public ModuleDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterModuleDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitModuleDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitModuleDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDefinitionContext moduleDefinition() throws RecognitionException {
		ModuleDefinitionContext _localctx = new ModuleDefinitionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_moduleDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(IDENTIFIER);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(79);
				match(T__0);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
					{
					setState(80);
					match(IDENTIFIER);
					setState(81);
					match(T__1);
					setState(82);
					match(NUMBER);
					setState(83);
					match(T__2);
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(89);
				match(T__3);
				}
			}

			setState(92);
			match(T__4);
			setState(93);
			tagDefault();
			setState(94);
			extensionDefault();
			setState(95);
			match(T__5);
			setState(96);
			match(T__6);
			setState(97);
			moduleBody();
			setState(98);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagDefaultContext extends ParserRuleContext {
		public TagDefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagDefault; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterTagDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitTagDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitTagDefault(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagDefaultContext tagDefault() throws RecognitionException {
		TagDefaultContext _localctx = new TagDefaultContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tagDefault);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
				{
				setState(100);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(101);
				match(T__11);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtensionDefaultContext extends ParserRuleContext {
		public ExtensionDefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extensionDefault; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterExtensionDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitExtensionDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitExtensionDefault(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtensionDefaultContext extensionDefault() throws RecognitionException {
		ExtensionDefaultContext _localctx = new ExtensionDefaultContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_extensionDefault);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(104);
				match(T__12);
				setState(105);
				match(T__13);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleBodyContext extends ParserRuleContext {
		public ExportsContext exports() {
			return getRuleContext(ExportsContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public AssignmentListContext assignmentList() {
			return getRuleContext(AssignmentListContext.class,0);
		}
		public ModuleBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterModuleBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitModuleBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitModuleBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleBodyContext moduleBody() throws RecognitionException {
		ModuleBodyContext _localctx = new ModuleBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moduleBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__17) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(108);
				exports();
				setState(109);
				imports();
				setState(110);
				assignmentList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportsContext extends ParserRuleContext {
		public SymbolsExportedContext symbolsExported() {
			return getRuleContext(SymbolsExportedContext.class,0);
		}
		public ExportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterExports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitExports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitExports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportsContext exports() throws RecognitionException {
		ExportsContext _localctx = new ExportsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exports);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(114);
				match(T__14);
				setState(115);
				symbolsExported();
				setState(116);
				match(T__15);
				}
				break;
			case 2:
				{
				setState(118);
				match(T__14);
				setState(119);
				match(T__16);
				setState(120);
				match(T__15);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolsExportedContext extends ParserRuleContext {
		public SymbolListContext symbolList() {
			return getRuleContext(SymbolListContext.class,0);
		}
		public SymbolsExportedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolsExported; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterSymbolsExported(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitSymbolsExported(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitSymbolsExported(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolsExportedContext symbolsExported() throws RecognitionException {
		SymbolsExportedContext _localctx = new SymbolsExportedContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_symbolsExported);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__28) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(123);
				symbolList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public SymbolsImportedContext symbolsImported() {
			return getRuleContext(SymbolsImportedContext.class,0);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(126);
				match(T__17);
				setState(127);
				symbolsImported();
				setState(128);
				match(T__15);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolsImportedContext extends ParserRuleContext {
		public SymbolsFromModuleListContext symbolsFromModuleList() {
			return getRuleContext(SymbolsFromModuleListContext.class,0);
		}
		public SymbolsImportedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolsImported; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterSymbolsImported(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitSymbolsImported(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitSymbolsImported(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolsImportedContext symbolsImported() throws RecognitionException {
		SymbolsImportedContext _localctx = new SymbolsImportedContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_symbolsImported);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__28) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(132);
				symbolsFromModuleList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolsFromModuleListContext extends ParserRuleContext {
		public List<SymbolsFromModuleContext> symbolsFromModule() {
			return getRuleContexts(SymbolsFromModuleContext.class);
		}
		public SymbolsFromModuleContext symbolsFromModule(int i) {
			return getRuleContext(SymbolsFromModuleContext.class,i);
		}
		public SymbolsFromModuleListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolsFromModuleList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterSymbolsFromModuleList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitSymbolsFromModuleList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitSymbolsFromModuleList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolsFromModuleListContext symbolsFromModuleList() throws RecognitionException {
		SymbolsFromModuleListContext _localctx = new SymbolsFromModuleListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_symbolsFromModuleList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(135);
			symbolsFromModule();
			}
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << T__28) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(136);
				symbolsFromModule();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolsFromModuleContext extends ParserRuleContext {
		public SymbolListContext symbolList() {
			return getRuleContext(SymbolListContext.class,0);
		}
		public GlobalModuleReferenceContext globalModuleReference() {
			return getRuleContext(GlobalModuleReferenceContext.class,0);
		}
		public SymbolsFromModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolsFromModule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterSymbolsFromModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitSymbolsFromModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitSymbolsFromModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolsFromModuleContext symbolsFromModule() throws RecognitionException {
		SymbolsFromModuleContext _localctx = new SymbolsFromModuleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_symbolsFromModule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			symbolList();
			setState(143);
			match(T__18);
			setState(144);
			globalModuleReference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalModuleReferenceContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SNMPMIBParser.IDENTIFIER, 0); }
		public GlobalModuleReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalModuleReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).enterGlobalModuleReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SNMPMIBListener ) ((SNMPMIBListener)listener).exitGlobalModuleReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SNMPMIBVisitor ) return ((SNMPMIBVisitor<? extends T>)visitor).visitGlobalModuleReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalModuleReferenceContext globalModuleReference() throws RecognitionException {
		GlobalModuleReferenceContext _localctx = new GlobalModuleReferenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_globalModuleReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
